fix too large button

--- a/styles/main.sass
+++ b/styles/main.sass
@@ -127,6 +127,9 @@ a:hover
 dt
   font-size: 2em
 
+dt .btn
+  font-size: inherit
+
 td
   padding: 6px 0
 
